--- a/tradingview-style/style.css
+++ b/tradingview-style/style.css
@@ -24,7 +24,8 @@
 .header-chart-panel .button svg {
   fill: #8c8c8c;
 }
-.feature-no-touch .header-chart-panel .button:hover, .feature-no-touch .symbol-edit-widget .button:hover {
+.feature-no-touch .header-chart-panel .button:hover,
+.feature-no-touch .symbol-edit-widget .button:hover {
   background: #353535;
   border: 1px solid #424242;
 }
@@ -46,7 +47,8 @@
 .charts-popup-list .item.active {
   background: #353535;
 }
-.charts-popup-list .item.active, .feature-no-touch .charts-popup-list .item:hover {
+.charts-popup-list .item.active,
+.feature-no-touch .charts-popup-list .item:hover {
   background: #353535;
 }
 .charts-popup-list .item span {
@@ -57,7 +59,8 @@
   float: left;
   fill: #8c8c8c!important;
 }
-.favored-list-container.active span.submenu, .favored-list-container span.submenu.active {
+.favored-list-container.active span.submenu,
+.favored-list-container span.submenu.active {
   color: #adafb3;
   background: #424242!important;
   border-color: #424242;
@@ -83,18 +86,52 @@
   background: #353535;
   color: #68696b;
 }
-.feature-no-touch ._tv-dialog .button:not(.disabled):not(.selected):hover:before, .feature-no-touch ._tv-dialog .custom-select .switcher:not(.disabled):not(.selected):hover:before, .feature-no-touch ._tv-dialog .favored-list-container span:not(.disabled):not(.selected):hover:before, .feature-no-touch ._tv-dialog .submenu:not(.disabled):not(.selected):hover:before, .feature-no-touch .bottom-widgetbar-content.backtesting .button:not(.disabled):not(.selected):hover:before, .feature-no-touch .bottom-widgetbar-content.backtesting .custom-select .switcher:not(.disabled):not(.selected):hover:before, .feature-no-touch .bottom-widgetbar-content.backtesting .favored-list-container span:not(.disabled):not(.selected):hover:before, .feature-no-touch .bottom-widgetbar-content.backtesting .submenu:not(.disabled):not(.selected):hover:before, .feature-no-touch .header-chart-panel .button:not(.disabled):not(.selected):hover:before, .feature-no-touch .header-chart-panel .custom-select .switcher:not(.disabled):not(.selected):hover:before, .feature-no-touch .header-chart-panel .favored-list-container span:not(.disabled):not(.selected):hover:before, .feature-no-touch .header-chart-panel .submenu:not(.disabled):not(.selected):hover:before, .feature-no-touch .properties-toolbar .button:not(.disabled):not(.selected):hover:before, .feature-no-touch .properties-toolbar .custom-select .switcher:not(.disabled):not(.selected):hover:before, .feature-no-touch .properties-toolbar .favored-list-container span:not(.disabled):not(.selected):hover:before, .feature-no-touch .properties-toolbar .submenu:not(.disabled):not(.selected):hover:before {
+.feature-no-touch ._tv-dialog .button:not(.disabled):not(.selected):hover:before,
+.feature-no-touch ._tv-dialog .custom-select .switcher:not(.disabled):not(.selected):hover:before,
+.feature-no-touch ._tv-dialog .favored-list-container span:not(.disabled):not(.selected):hover:before,
+.feature-no-touch ._tv-dialog .submenu:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .bottom-widgetbar-content.backtesting .button:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .bottom-widgetbar-content.backtesting .custom-select .switcher:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .bottom-widgetbar-content.backtesting .favored-list-container span:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .bottom-widgetbar-content.backtesting .submenu:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .header-chart-panel .button:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .header-chart-panel .custom-select .switcher:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .header-chart-panel .favored-list-container span:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .header-chart-panel .submenu:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .properties-toolbar .button:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .properties-toolbar .custom-select .switcher:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .properties-toolbar .favored-list-container span:not(.disabled):not(.selected):hover:before,
+.feature-no-touch .properties-toolbar .submenu:not(.disabled):not(.selected):hover:before {
   border: 1px solid #424242;
 }
 .chart-page,
 .chart-page .loading-indicator {
   background: #2d2d2d!important;
 }
-.drawing-favorites-toolbar .tools-group .button, .feature-no-touch .tv-side-toolbar .tools-group .button:active, .feature-no-touch .tv-side-toolbar .tools-group .button:hover, .feature-touch .tv-side-toolbar .tools-group .button:active, .properties-toolbar .tools-group .button, .tv-side-toolbar .tools-group .button.active, .tv-side-toolbar .tools-group .button.selected {
+.drawing-favorites-toolbar .tools-group .button,
+.feature-no-touch .tv-side-toolbar .tools-group .button:active,
+.feature-no-touch .tv-side-toolbar .tools-group .button:hover,
+.feature-touch .tv-side-toolbar .tools-group .button:active,
+.properties-toolbar .tools-group .button,
+.tv-side-toolbar .tools-group .button.active,
+.tv-side-toolbar .tools-group .button.selected {
   background-color: #2d2d2d;
   border-color: #424242;
 }
-.drawing-favorites-toolbar .tools-group .button.active, .feature-no-touch .drawing-favorites-toolbar .tools-group .button:active, .feature-no-touch .properties-toolbar .tools-group .button:active, .feature-no-touch .tv-side-toolbar .tools-group .button:active .side, .feature-no-touch .tv-side-toolbar .tools-group .button:not(.subgroup):active, .feature-touch .drawing-favorites-toolbar .tools-group .button:active, .feature-touch .properties-toolbar .tools-group .button:active, .feature-touch .tv-side-toolbar .tools-group .button:active .side, .feature-touch .tv-side-toolbar .tools-group .button:not(.subgroup):active, .properties-toolbar .tools-group .button.active, .tv-side-toolbar .tools-group .button.active .side, .tv-side-toolbar .tools-group .button.selected .main, .tv-side-toolbar .tools-group .button:not(.subgroup).active, .tv-side-toolbar .tools-group .button:not(.subgroup).selected {
+.drawing-favorites-toolbar .tools-group .button.active,
+.feature-no-touch .drawing-favorites-toolbar .tools-group .button:active,
+.feature-no-touch .properties-toolbar .tools-group .button:active,
+.feature-no-touch .tv-side-toolbar .tools-group .button:active .side,
+.feature-no-touch .tv-side-toolbar .tools-group .button:not(.subgroup):active,
+.feature-touch .drawing-favorites-toolbar .tools-group .button:active,
+.feature-touch .properties-toolbar .tools-group .button:active,
+.feature-touch .tv-side-toolbar .tools-group .button:active .side,
+.feature-touch .tv-side-toolbar .tools-group .button:not(.subgroup):active,
+.properties-toolbar .tools-group .button.active,
+.tv-side-toolbar .tools-group .button.active .side,
+.tv-side-toolbar .tools-group .button.selected .main,
+.tv-side-toolbar .tools-group .button:not(.subgroup).active,
+.tv-side-toolbar .tools-group .button:not(.subgroup).selected {
   background-color: #2d2d2d;
 }
 .tv-side-toolbar .tools-group .button .side {
@@ -106,12 +143,16 @@
 .line-tool-icons-popup .item.active span {
   color: #5981ea;
 }
-.feature-no-touch .header-chart-panel .button.disabled:active, .feature-touch .header-chart-panel .button.disabled:active, .header-chart-panel .button.disabled, .header-chart-panel .button.disabled.active {
+.feature-no-touch .header-chart-panel .button.disabled:active,
+.feature-touch .header-chart-panel .button.disabled:active,
+.header-chart-panel .button.disabled,
+.header-chart-panel .button.disabled.active {
   background: #2d2d2d!important;
   border-color: #424242;
   box-shadow: none;
 }
-.feature-no-touch .tv-side-toolbar .tools-group .button:hover .main.text-as-icon, .tv-side-toolbar .tools-group .button.selected .main.text-as-icon {
+.feature-no-touch .tv-side-toolbar .tools-group .button:hover .main.text-as-icon,
+.tv-side-toolbar .tools-group .button.selected .main.text-as-icon {
   color: #5981ea;
 }
 .tv-floating-toolbar {
@@ -128,26 +169,46 @@
 .tv-floating-toolbar__widget {
   border-left: 1px solid #424242;
 }
-.tv-linetool-properties-toolbar__color-picker .colorpicker-widget+svg .bg {
+.tv-linetool-properties-toolbar__color-picker .colorpicker-widget + svg .bg {
   fill: #2d2d2d;
 }
 .tv-floating-toolbar__drag svg {
   fill: #777777;
 }
-.feature-no-touch .tv-linetool-properties-toolbar__button:hover, .tv-linetool-properties-toolbar__button.i-active, .tv-linetool-properties-toolbar__button.i-dropped {
+.feature-no-touch .tv-linetool-properties-toolbar__button:hover,
+.tv-linetool-properties-toolbar__button.i-active,
+.tv-linetool-properties-toolbar__button.i-dropped {
   background-color: #353535;
 }
-.i-active .tv-linetool-properties-toolbar__icon svg, .i-dropped .tv-linetool-properties-toolbar__icon svg {
+.i-active .tv-linetool-properties-toolbar__icon svg,
+.i-dropped .tv-linetool-properties-toolbar__icon svg {
   fill: #5981ea;
 }
 
 .tv-linetool-properties-toolbar__button.i-dropped .tv-linetool-properties-toolbar__caret {
   color: #5981ea;
 }
-.feature-no-touch .tv-linetool-properties-toolbar__color-picker .colorpicker-widget+svg:hover .bg, .tv-linetool-properties-toolbar__color-picker .colorpicker-widget.i-active+svg .bg {
+.feature-no-touch .tv-linetool-properties-toolbar__color-picker .colorpicker-widget+svg:hover .bg,
+.tv-linetool-properties-toolbar__color-picker .colorpicker-widget.i-active+svg .bg {
   fill: #353535;
 }
-.bottom-widgetbar-content.backtesting .button.active, .ch-controls .button.active, .feature-no-touch .bottom-widgetbar-content.backtesting .button:active, .feature-no-touch .ch-controls .button:active, .feature-no-touch .header-chart-panel .button.active:hover, .feature-no-touch .header-chart-panel .button:active, .feature-no-touch .hotlist-controls .button:active, .feature-no-touch .save-load-buttons .active:hover, .feature-no-touch .save-load-buttons a:not(.link):active, .feature-no-touch .symbol-edit-widget .button:active, .feature-touch .bottom-widgetbar-content.backtesting .button:active, .feature-touch .ch-controls .button:active, .feature-touch .header-chart-panel .button:active, .feature-touch .hotlist-controls .button:active, .feature-touch .save-load-buttons a:not(.link):active, .feature-touch .symbol-edit-widget .button:active, .header-chart-panel .button.active, .hotlist-controls .button.active, .save-load-buttons .active, .symbol-edit-widget .button.active {
+.bottom-widgetbar-content.backtesting .button.active, .ch-controls .button.active,
+.feature-no-touch .bottom-widgetbar-content.backtesting .button:active,
+.feature-no-touch .ch-controls .button:active,
+.feature-no-touch .header-chart-panel .button.active:hover,
+.feature-no-touch .header-chart-panel .button:active,
+.feature-no-touch .hotlist-controls .button:active,
+.feature-no-touch .save-load-buttons .active:hover,
+.feature-no-touch .save-load-buttons a:not(.link):active,
+.feature-no-touch .symbol-edit-widget .button:active,
+.feature-touch .bottom-widgetbar-content.backtesting .button:active,
+.feature-touch .ch-controls .button:active,
+.feature-touch .header-chart-panel .button:active,
+.feature-touch .hotlist-controls .button:active,
+.feature-touch .save-load-buttons a:not(.link):active,
+.feature-touch .symbol-edit-widget .button:active,
+.header-chart-panel .button.active, .hotlist-controls .button.active,
+.save-load-buttons .active, .symbol-edit-widget .button.active {
   background: #424242!important;
   color: #333;
 }
@@ -155,7 +216,10 @@
 .button.properties.active svg {
   fill: #5981ea;
 }
-.favored-list-container span.active, .favored-list-container span.selected, .feature-no-touch .favored-list-container span:active, .feature-touch .favored-list-container span:active {
+.favored-list-container span.active,
+.favored-list-container span.selected,
+.feature-no-touch .favored-list-container span:active,
+.feature-touch .favored-list-container span:active {
   background: #424242!important;
   color: #5981ea;
 }
@@ -163,10 +227,12 @@
   background-color: #2d2d2d;
 }
 
-.feature-no-touch .tv-grouped-floating-toolbar__widget-wrapper:hover, .tv-grouped-floating-toolbar__widget-wrapper.i-dropped {
+.feature-no-touch .tv-grouped-floating-toolbar__widget-wrapper:hover,
+.tv-grouped-floating-toolbar__widget-wrapper.i-dropped {
   background-color: #353535;
 }
-.feature-no-touch .tv-grouped-floating-toolbar__sub-widget:hover, .tv-grouped-floating-toolbar__sub-widget--current {
+.feature-no-touch .tv-grouped-floating-toolbar__sub-widget:hover,
+.tv-grouped-floating-toolbar__sub-widget--current {
   background-color: #2d2d2d;
 }
 .tv-grouped-floating-toolbar__popup {
@@ -177,7 +243,8 @@
 .tv-grouped-floating-toolbar__sub-widget:not(:first-child) {
   border-left: 1px solid #424242;
 }
-.feature-no-touch .tv-grouped-floating-toolbar__sub-widget:hover, .tv-grouped-floating-toolbar__sub-widget--current {
+.feature-no-touch .tv-grouped-floating-toolbar__sub-widget:hover,
+.tv-grouped-floating-toolbar__sub-widget--current {
   background-color: #353535;
 }
 .tv-favorited-drawings-toolbar__widget {
@@ -254,10 +321,15 @@ tr.context-menu-hover {
   color: #8c8c8c;
   border-bottom: 1px solid #383838;
 }
-.feature-no-touch .tv-tabs__tab:active, .feature-no-touch .tv-tabs__tab:hover, .feature-touch .tv-tabs__tab:active, .tv-tabs__tab.i-active, .tv-tabs__tab.i-hover {
+.feature-no-touch .tv-tabs__tab:active,
+.feature-no-touch .tv-tabs__tab:hover,
+.feature-touch .tv-tabs__tab:active,
+.tv-tabs__tab.i-active,
+.tv-tabs__tab.i-hover {
   color: #FFF;
 }
-.tv-tabs__slider, .tv-tabs__tab.i-active:after {
+.tv-tabs__slider,
+.tv-tabs__tab.i-active:after {
   background-color: #5981ea;
 }
 .tv-tabs:before {
@@ -291,7 +363,7 @@ tr.context-menu-hover {
   fill: #8c8c8c;
 }
 .tv-objects-tree-item__drag-icon svg {
-  fill: #777777;
+  fill: #777;
 }
 .tv-objects-tree-item__button svg {
   fill: #777;
@@ -333,7 +405,8 @@ tr.context-menu-hover {
 .tv-text-input.inset {
   background: #2d2d2d;
 }
-.feature-no-touch .tv-text-input:focus, .feature-touch .tv-text-input:focus {
+.feature-no-touch .tv-text-input:focus,
+.feature-touch .tv-text-input:focus {
   border-color: #5981ea;
 }
 ._tv-dialog-content label {
@@ -352,47 +425,71 @@ tr.context-menu-hover {
   color: #ffffff;
   border: 1px solid #424242;
 }
+
 .tv-select-container {
   background-color: #2d2d2d;
   border: 1px solid #777;
   color: #888888;
 }
-.feature-no-touch .tv-select-container:hover:not(.sbHolderDisabled), .feature-no-touch .tv-select-container:hover:not(.sbHolderDisabled) a {
+
+.feature-no-touch .tv-select-container:hover:not(.sbHolderDisabled),
+.feature-no-touch .tv-select-container:hover:not(.sbHolderDisabled) a {
   color: #fff;
 }
-.feature-no-touch ._tv-dialog ._tv-button:not(.ok):not(.cancel):not(.disabled):not(.delete):hover, .feature-no-touch ._tv-dialog .tv-select-container:not(.sbHolderDisabled):hover, .feature-no-touch .bottom-widgetbar-content.backtesting ._tv-button:not(.ok):not(.cancel):not(.disabled):not(.delete):hover, .feature-no-touch .bottom-widgetbar-content.backtesting .tv-select-container:not(.sbHolderDisabled):hover, .feature-no-touch .header-chart-panel ._tv-button:not(.ok):not(.cancel):not(.disabled):not(.delete):hover, .feature-no-touch .header-chart-panel .tv-select-container:not(.sbHolderDisabled):hover, .feature-no-touch .properties-toolbar ._tv-button:not(.ok):not(.cancel):not(.disabled):not(.delete):hover, .feature-no-touch .properties-toolbar .tv-select-container:not(.sbHolderDisabled):hover, .feature-no-touch .widgetbar-widgetheader .button:hover {
+
+.feature-no-touch ._tv-dialog ._tv-button:not(.ok):not(.cancel):not(.disabled):not(.delete):hover,
+.feature-no-touch ._tv-dialog .tv-select-container:not(.sbHolderDisabled):hover,
+.feature-no-touch .bottom-widgetbar-content.backtesting
+._tv-button:not(.ok):not(.cancel):not(.disabled):not(.delete):hover,
+.feature-no-touch .bottom-widgetbar-content.backtesting
+.tv-select-container:not(.sbHolderDisabled):hover,
+.feature-no-touch .header-chart-panel ._tv-button:not(.ok):not(.cancel):not(.disabled):not(.delete):hover,
+.feature-no-touch .header-chart-panel .tv-select-container:not(.sbHolderDisabled):hover,
+.feature-no-touch .properties-toolbar ._tv-button:not(.ok):not(.cancel):not(.disabled):not(.delete):hover,
+.feature-no-touch .properties-toolbar .tv-select-container:not(.sbHolderDisabled):hover,
+.feature-no-touch .widgetbar-widgetheader .button:hover {
   border: 1px solid #777777;
 }
-.tv-select-container .sbOptions, .tv-unstyled-select-container .sbOptions {
+.tv-select-container .sbOptions,
+.tv-unstyled-select-container .sbOptions {
   background: #2d2d2d;
   border: 1px solid #424242;
 }
-.feature-no-touch .tv-select-container:hover:not(.sbHolderDisabled), .feature-no-touch .tv-select-container:hover:not(.sbHolderDisabled) a {
+.feature-no-touch .tv-select-container:hover:not(.sbHolderDisabled),
+.feature-no-touch .tv-select-container:hover:not(.sbHolderDisabled) a {
   color: #8b8b8b;
 }
-.feature-no-touch .tv-select-container .sbOptions a:hover, .feature-no-touch .tv-unstyled-select-container .sbOptions a:hover {
+.feature-no-touch .tv-select-container .sbOptions a:hover,
+.feature-no-touch .tv-unstyled-select-container .sbOptions a:hover {
   background: #353535;
 }
-.tv-select-container .sbOptions a.active, .tv-unstyled-select-container .sbOptions a.active {
+.tv-select-container .sbOptions a.active,
+.tv-unstyled-select-container .sbOptions a.active {
   background: #424242;
   border-left: 3px solid #5881ea;
   color: #333;
 }
-.tv-select-container.sbHolderOpen, .tv-select-container.sbHolderOpen a {
+.tv-select-container.sbHolderOpen,
+.tv-select-container.sbHolderOpen a {
   color: #8b8b8b;
 }
-._tv-button.active, ._tv-button.toolbutton.active, .feature-no-touch ._tv-button.toolbutton:active, .feature-no-touch ._tv-button:active:not([disabled]), .feature-no-touch .tv-select-container:active, .feature-touch ._tv-button.toolbutton:active, .feature-touch ._tv-button:active:not([disabled]), .feature-touch .tv-select-container:active, .tv-select-container.sbHolderOpen {
+._tv-button.active, ._tv-button.toolbutton.active,
+.feature-no-touch ._tv-button.toolbutton:active,
+.feature-no-touch ._tv-button:active:not([disabled]),
+.feature-no-touch .tv-select-container:active,
+.feature-touch ._tv-button.toolbutton:active,
+.feature-touch ._tv-button:active:not([disabled]),
+.feature-touch .tv-select-container:active,
+.tv-select-container.sbHolderOpen {
   background: #2d2d2d;
 }
-.tv-select-container .sbOptions, .tv-unstyled-select-container .sbOptions {
+.tv-select-container .sbOptions,
+.tv-unstyled-select-container .sbOptions {
   background: #2d2d2d;
   border: 1px solid #777777;
-}
-._tv-dialog.change-interval-dialog ._tv-dialog-content .change-interval-input {
-  background: #2d2d2d;
 }
 ._tv-dialog.change-interval-dialog ._tv-dialog-content .change-interval-input {
   background: #2d2d2d;
   color: #FFF;
   border-color: #777;
- }
+}
